objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <description>This sales process applies to individual giving and corporate giving.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gift Aid Income</fullName>
        <description>This sales process applies to gift aid income.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Claimed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <description>This sales process applies to grants from trusts and foundations.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Application Not Pursued</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Draft Application</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <description>This sales process applies to in-kind gifts.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legacy Gift</fullName>
        <description>This sales process applies to legacy giving.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <description>This sales process applies to major giving.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Membership</fullName>
        <description>This sales process applies to membership.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Considering</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Attending_Ball__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box for in kind donations made in support of the annual ball event to signal if the donor is attending the event in some capacity.</description>
        <inlineHelpText>Is the donor attending the ball?</inlineHelpText>
        <label>Attending Ball</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Purpose__c</fullName>
        <description>Field for Ball event In Kind Donations ONLY. This is to identify those for the event raffle and those for the event auction.</description>
        <inlineHelpText>Is the donation for the auction or raffle?</inlineHelpText>
        <label>Donation Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auction</fullName>
                    <default>true</default>
                    <label>Auction</label>
                </value>
                <value>
                    <fullName>Raffle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Export_to_Finance_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox gets set to TRUE by a process builder when the GAU allocation records associated with the opportunity has been processed, i.e., the Finance Export Status on the GAU allocations is set to &quot;Exported&quot;, as opposed to &quot;To Be Exported&quot;. It is used by a validation rule to determine whether the opportunity&apos;s properties can be changed or not (VSA-33).</description>
        <label>Export to Finance Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees_Deducted__c</fullName>
        <description>Fees Deducted</description>
        <formula>IF(Gross_Amount__c = 0,0,Gross_Amount__c -  Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the Gross Amount minus the Net Amount to show the fees deducted by the third party.</inlineHelpText>
        <label>Fees Deducted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Export_Date__c</fullName>
        <description>Finance Export</description>
        <label>Finance Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Export_Group__c</fullName>
        <formula>&apos;INCOME~&apos;&amp;  Id &amp;  TEXT(CloseDate) &amp;  TEXT(CreatedDate)</formula>
        <label>Finance Export Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Export_Status__c</fullName>
        <description>This shows the status of the opportunity export. This may be overridden by other factors.</description>
        <inlineHelpText>This shows the status of the opportunity export. This may be overridden by other factors.</inlineHelpText>
        <label>Finance Export Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Exported</fullName>
                    <default>true</default>
                    <label>To Be Exported</label>
                </value>
                <value>
                    <fullName>Exported</fullName>
                </value>
                <value>
                    <fullName>Do Not Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Aid_Excluded_Reason__c</fullName>
        <description>This field contains the description of why a particular donation has been marked as &apos;Is Gift Aid Excluded&apos; = TRUE. It is manually updated by end users (VSA-32).</description>
        <inlineHelpText>If this donation is being marked as &apos;excluded&apos; from gift aid claim, please provide the reason for the exclusion in this field.</inlineHelpText>
        <label>Gift Aid Excluded Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Documents_URL__c</fullName>
        <description>This field contains a URL to a folder on the VSA network which contains the grant application, reports etc. (VSA-14).</description>
        <label>Grant Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <inlineHelpText>This is the amount originally donated BEFORE fees and other charges are taken off by the third-party.</inlineHelpText>
        <label>Gross Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IK_Date_1st_letter_Sent__c</fullName>
        <description>Case 4638: Created as a proof of concept to extend the In Kind Sales process</description>
        <inlineHelpText>Enter the date the 1st letter was sent</inlineHelpText>
        <label>IK: Date 1st letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IK_Date_2nd_letter_Sent__c</fullName>
        <description>Case 4638: Created as a proof of concept to extend the In Kind Sales process</description>
        <inlineHelpText>Enter the date the second letter was sent, if it was required.</inlineHelpText>
        <label>IK: Date 2nd letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IK_Next_Step__c</fullName>
        <description>Case 4638: Created as a proof of concept to extend the In Kind Sales process.
Guidance for what is required for the next step or in cases of 3 and 4, details the outcome from correspondence.</description>
        <inlineHelpText>Select the appropriate option to reflect the action to be taken in order to progress the opportunity to the next step. Items 3 and 4 however give details on the outcome of some opportunities.</inlineHelpText>
        <label>IK: Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Send Initial Letter</fullName>
                </value>
                <value>
                    <fullName>2 - Send Follow Up Letter</fullName>
                </value>
                <value>
                    <fullName>3 - Declined</fullName>
                </value>
                <value>
                    <fullName>4 - Declined - Try Next Year</fullName>
                </value>
                <value>
                    <fullName>5 - Waiting for Delivery</fullName>
                </value>
                <value>
                    <fullName>6 - Item In VSA</fullName>
                </value>
                <value>
                    <fullName>7 - Final Comms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Connections__c</fullName>
        <description>This field is used in the context of grants, and contains any relevant information regarding connections that staff, trustees etc may have which may be useful to the fundraising efforts (VSA-4).</description>
        <label>Internal Connections</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>This field contains the date the invoice was raised, if applicable. The field has been created specifically for the context of facilitating an invoice which is issued for a table which has been booked for a formal event (VSA-35).</description>
        <inlineHelpText>The date the invoice was raised.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_Open_Accounts__c</fullName>
        <description>This field contains the invoice reference number for an invoice which has been generated in Open Accounts. The number is manually copy-pasted to this field (VSA-35).</description>
        <externalId>true</externalId>
        <inlineHelpText>Invoice number from Open Accounts.</inlineHelpText>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation_Gift_Aid_Eligible_VSA__c</fullName>
        <description>This field is used by the Clarity Gift Aid app to determine whether the donation is eligible for gift aid claim. It ensures that corporate donations aren&apos;t claimed for gift aid, and that only select opportunity record types are eligible, as for example legacy giving is exempted from gift aid claim (VSA-32).</description>
        <formula>IF(
  AND(
    Account.RecordType.DeveloperName = &apos;HH_Account&apos;, 
    cc_Created_by_Charity_Checkout__c = FALSE,
    Is_Table__c = FALSE,
    Is_Ticket__c = FALSE,
     OR(
       RecordType.DeveloperName = &apos;Donation&apos;,
       RecordType.DeveloperName = &apos;MajorGift&apos;)),
  TRUE, 
  FALSE
)

/*If a donation has been received via Charity Checkout, Clarity Gift Aid cannot claim the gift aid. This is because Charity Checkout will have claimed the gift aid on VSA&apos;s behalf already.*/</formula>
        <label>Is Donation Gift Aid Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Method_Gift_Aid_Eligible_VSA__c</fullName>
        <description>This field is used by the Clarity Gift Aid app to determine a donation&apos;s eligibility to be claimed for gift aid. If VSA decides that other payment methods should be eligible for gift aid claim, this formula needs to be modified (VSA-32).</description>
        <formula>IF(
  OR(
    ISPICKVAL( Payment_Method__c , &quot;Cash&quot;),
    ISPICKVAL( Payment_Method__c , &quot;Debit/credit card&quot;),
    ISPICKVAL( Payment_Method__c , &quot;Bank Transfer&quot;),
    ISPICKVAL( Payment_Method__c , &quot;Cheque&quot;),
    ISPICKVAL( Payment_Method__c , &quot;Direct Debit&quot;),
    ISPICKVAL( Payment_Method__c , &quot;Standing Order&quot;)
   ),
  TRUE, 
  FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Payment Method Gift Aid Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Table__c</fullName>
        <description>This field returns a value of TRUE if the Type picklist value is set to &quot;Table&quot;. This field is used in other formulas and reporting (VSA-14).</description>
        <formula>IF ( ISPICKVAL ( Type , &quot;Table&quot;), TRUE, FALSE)</formula>
        <label>Is Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ticket__c</fullName>
        <description>This field returns a value of TRUE if the Type picklist value is set to &quot;Ticket&quot;. This field is used in other formulas and reporting (VSA-14).</description>
        <formula>IF (  ISPICKVAL ( Type , &quot;Ticket&quot;), TRUE, FALSE)</formula>
        <label>Is Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_for_Amenities__c</fullName>
        <description>This field returns a value of TRUE if the Type picklist value is set to &quot;Amenities&quot;. This field is used in other formulas, reporting and export to finance (VSA-14)</description>
        <formula>IF (  ISPICKVAL ( Type , &quot;Amenities&quot;), TRUE, FALSE)</formula>
        <label>Is for Amenities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Not_Owner__c</fullName>
        <description>This field returns a value of TRUE if the user who last modified the record is someone else besides the owner (VSA-4).</description>
        <formula>IF ( LastModifiedById &lt;&gt;  OwnerId , TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by Not Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to a parent opportunity. It is used when a donation - typically a major gift or a grant - is given to VSA in multiple instalments. In that case, each of the instalments will be recorded as an opportunity record itself, and will then have a &apos;Parent Opportunity&apos; in order to group the instalments (VSA-45).</description>
        <inlineHelpText>Please populate this field with a parent opportunity if the donation is an instalment of a larger donation, e.g., a £5,000 instalment of a £20,000 grant.</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Instalments</relationshipLabel>
        <relationshipName>OpportunityInstalments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>This field contains the means by which this donation was paid, if possible. It may be derived from the record&apos;s recurring donation, if applicable via NPSP custom field mapping (VSA-14).</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posted_Finance_Code__c</fullName>
        <description>This is the finance code that was posted to the finance system. This is updated when the opportunity is posted in case the formula is changed through campaign etc</description>
        <inlineHelpText>This is the finance code that was posted to the finance system. This is updated when the opportunity is posted in case the formula is changed through campaign etc</inlineHelpText>
        <label>Posted Finance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source_For_List_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field always contains the same value as the standard Opportunity.CampaignID (label &apos;Primary Campaign Source&apos;) field. The two fields are kept in sync by a Process Builder on the Opportunity object. The field shouldn&apos;t be in any page layouts - only list views. The field has been created to address that the standard CampaignID field can&apos;t be added to list views due to a known Salesforce limitation (Giveclarity case #4554).</description>
        <label>Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_of_Donations_Gift_Aid__c</fullName>
        <description>This field is used within the context of the Gift Aid Income opportunity record type. It contains a reference for the gift aid claim. At the time this field is created, VSA are not entirely sure what the reference item will be (a number, a description, a reference to a Clarity Gift Aid claim record), so for the time being this is a text field. This field may be replaced by a look-up field at some later point (Giveclarity case #4452).</description>
        <inlineHelpText>Please provide details about where the gift aid claim originated from, e.g., JustGiving / Virgin Money Giving / Charity Checkout / Clarity Gift Aid.</inlineHelpText>
        <label>Source of Donations/Gift Aid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Just Giving</fullName>
                </value>
                <value>
                    <fullName>Virgin Money Giving</fullName>
                </value>
                <value>
                    <fullName>Clarity Gift Aid / Salesforce</fullName>
                </value>
                <value>
                    <fullName>Charity Checkout</fullName>
                </value>
                <value>
                    <fullName>Charitable Giving Benevity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table_Booked_Date__c</fullName>
        <description>This field contains the date a table for a formal event, was booked. This date is manually entered (VSA-35).</description>
        <inlineHelpText>The date the table was booked/purchased, i.e., not the event date.</inlineHelpText>
        <label>Table Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Party_Source__c</fullName>
        <description>Third Party through which we received the donation</description>
        <inlineHelpText>This field is used to indicate through which third party we received the donation from.  This will have resulted in fees being deducted and us just receiving the net amount.</inlineHelpText>
        <label>Third Party Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Givergy</fullName>
                </value>
                <value>
                    <fullName>Just Giving</fullName>
                </value>
                <value>
                    <fullName>Virgin Money Giving</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Benevity</fullName>
                </value>
                <value>
                    <fullName>Charities Aid Foundation</fullName>
                </value>
                <value>
                    <fullName>Charitable Giving</fullName>
                </value>
                <value>
                    <fullName>Charity Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <description>This field returns TODAY&apos;S DATE. It is used as input for Today_Date_as_Text, which in turn is used in a mail merge document template to stamp the document with today&apos;s date (VSA-29).</description>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_Date_as_DDMMYYYY__c</fullName>
        <description>This field returns today&apos;s date in DD/MM/YYYY format. It is used by a workflow rule to update opportunity name (VSA-34).</description>
        <formula>LPAD(TEXT(DAY( Today_Date__c )), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(MONTH( Today_Date__c )), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp;
TEXT(YEAR( Today_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date as DD/MM/YYYY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Date_as_Text__c</fullName>
        <description>This field returns TODAY&apos;S DATE in a text format. It is used in a mail merge template (VSA-29).</description>
        <formula>IF( 
ISBLANK( Today_Date__c ), 
NULL, 
( 
TEXT(DAY( Today_Date__c ))&amp; 
CASE( 
DAY( Today_Date__c ), 
1, &apos;st&apos;, 
2, &apos;nd&apos;, 
3, &apos;rd&apos;, 
21,&apos;st&apos;, 
22,&apos;nd&apos;, 
23,&apos;rd&apos;, 
31,&apos;st&apos;, 
&apos;th&apos; 

)&amp;&apos; &apos;&amp; 
CASE( 
MONTH( Today_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)&amp;&apos; &apos;&amp; 
TEXT(YEAR( Today_Date__c )) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a link to the transaction summary record that this is merged into</description>
        <label>Transaction Summary</label>
        <referenceTo>Transaction_Summary__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Code__c</fullName>
        <description>This field contains the donation&apos;s VAT code, if applicable. The VAT code on a donation differs depending on the origin of the donation itself, i.e., where the money comes from (VSA-4).</description>
        <inlineHelpText>VAT code examples: V1 – sale of auction items, memberships; V3 – raffle &amp; event ticket sales; V8 – general &amp; challenge event donations, legacies. V2 - Only for Corp Vol Services. If you are unsure which VAT code to use please contact the Finance Team.</inlineHelpText>
        <label>VAT Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VAT_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cc_Admin_Fee__c</fullName>
        <description>This field contains an admin fee value from Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Admin Fee (CC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_Campaign_Title__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Campaign Title (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Campaign_Type__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Campaign Type (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Checkout_Reference_URL__c</fullName>
        <description>This field contains the checkout_reference property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Checkout Reference URL (CC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_Choose_Where_Your_Donation_Goes__c</fullName>
        <description>This field contains a text value which has been provided via a submission to Charity Checkout (CC). On a CC-hosted web page, the donor can indicate what cause they wish to support by choosing a value in a dropdown field. The field is populated by the Charity Checkout Zapier trigger. In Salesforce this value is used by a process builder to generate GAU Allocations (VSA-14).</description>
        <label>Choose Where Your Donation Goes (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult &amp; Community</fullName>
                </value>
                <value>
                    <fullName>Adult Carers</fullName>
                </value>
                <value>
                    <fullName>Children &amp; Families</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Changing Lives Mental Health Campaign</fullName>
                </value>
                <value>
                    <fullName>Where the need is greatest</fullName>
                </value>
                <value>
                    <fullName>Vintage Tea Party</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                    <isActive>false</isActive>
                    <label>Mental Health</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cc_Created_Date_Time__c</fullName>
        <description>This field contains the Created Date/Time value from Charity Checkout. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Created Date/Time (CC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cc_Created_by_Charity_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to TRUE if a donation has been created by Charity Checkout, which is an external fundraising service provider. The field is used to determine whether a donation, which is otherwise eligible for gift aid claim should be claimed by the Clarity Gift Aid app. This field is referenced in the Is_Donation_Gift_Aid_Eligible_VSA__c field (VSA-32).</description>
        <label>Created by Charity Checkout (CC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_Donation_Gross_Amount__c</fullName>
        <description>This field contains the donation gross amount as supplied by Charity Checkout. The value is used as the starting value to determine the actual donation credit which VSA will receive after Charity Checkout&apos;s various fees have been deducted from the donation. The value is provided via CC&apos;s Zapier trigger, and is used to calculate the Donation Net Amount (VSA-31).</description>
        <inlineHelpText>The donation amount the donor paid via the Charity Checkout website before fees are subtracted.</inlineHelpText>
        <label>Donation Gross Amount (CC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_Donation_ID__c</fullName>
        <description>This field contains a text string which is provided by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <externalId>true</externalId>
        <label>Donation ID (CC)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cc_Donation_Net_Amount__c</fullName>
        <description>This field returns the Donation Net Amount, i.e., the Donation Gross Amount value minus the fees which Charity Checkout subtracts. The value is used by a process builder to update the Amount field with the net amount. The reason the Amount field is being populated with the gross amount at the time the record is created, is to ensure that the Opportunity Name (set by NPSP) reflects the gross amount. In order to make sure the Amount field evenutally reflects VSA&apos;s actual earnings, it is subsequently set to net amount (VSA-31).</description>
        <formula>cc_Donation_Gross_Amount__c - ( cc_Admin_Fee__c + cc_Payment_Provider_Fee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Donation amount minus the Charity Checkout fees.</inlineHelpText>
        <label>Donation Net Amount (CC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_Donation_Status__c</fullName>
        <description>This field contains a text string which indicates the donation&apos;s status as provided by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Donation Status (CC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Donation_Team_URL__c</fullName>
        <description>This field contains the donation_team_url property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Donation Team URL (CC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_Donor_Custom_Code__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Donor Custom Code (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>